--- a/BIODATA.html
+++ b/BIODATA.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>BIOODATA</title>
+        <link rel="stylesheet" href="style.css"
     </head>
     <body>
         <center><h1>BIODATA</h1></center>
@@ -10,7 +11,9 @@
     <img src="download.jpg">
     </center>
 </br>
-    <table border=0 align=center>
+<hr>
+<h1>PERSONAL DATA</h1>
+    <table border="0">
         <tr>
             <td><b>Name</b></td>
             <td>:Example</td>
@@ -22,6 +25,10 @@
         <tr>
             <td><b>School</b></td>
             <td>:example</td>
+        </tr>
+        <tr>
+            <td><b>Adress</b></td>
+            <td>:Example</td>
         </tr>
     </table>
     </body>
