--- a/BIODATA.html
+++ b/BIODATA.html
@@ -4,6 +4,11 @@
         <title>BIOODATA</title>
     </head>
     <body>
+        <style>
+        body {
+            background-color: chocolate;
+        }
+        </style>
         <center><h1>BIODATA</h1></center>
     </br>
     <center>
@@ -23,7 +28,7 @@
         </tr>
         <tr>
             <td><b>School</b></td>
-            <td>:example</td>
+            <td>:Example</td>
         </tr>
         <tr>
             <td><b>Adress</b></td>
