--- a/BIODATA.html
+++ b/BIODATA.html
@@ -19,19 +19,19 @@
 <h1>PERSONAL DATA</h1>
     <table border="0">
         <tr>
-            <td><b>Name</b></td>
+            <th>Name</th>
             <td>:Example</td>
         </tr>
         <tr>
-            <td><b>Age</b></td>
+            <th>Age</th>
             <td>:--</td>
         </tr>
         <tr>
-            <td><b>School</b></td>
+            <th>School</th>
             <td>:Example</td>
         </tr>
         <tr>
-            <td><b>Adress</b></td>
+            <th>Address</th>
             <td>:Example</td>
         </tr>
     </table>
